<?xml version="1.0"?>
<package>
  <name>assistant_launch</name>
  <version>0.0.1</version>
  <description>The assistant_launch package</description>
  <maintainer email="todo@todo.todo">ToDo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot3_slam</run_depend>
  <run_depend>assistant_gazebo</run_depend>
</package>
